--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
             <i class="fas fa-graduation-cap"></i>
             <span>2022 - 2023</span>
             <h3>ecole Aston informatique by sqli</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo magni est quo vitae quis veritatis fugiat optio placeat enim!</p>
+            <p>ecole Aston informatique by sqliecole Aston informatique by sqliecole Aston informatique by sqliecole Aston informatique by sqliecole Aston informatique by sqli</p>
         </div>
 
         <div class="box">
@@ -180,7 +180,7 @@
         <div class="box">
             <i class="fas fa-graduation-cap"></i>
             <span>2018 - 2019</span>
-            <h3>front-end development</h3>
+            <h3>ecole Aston informatique by sqli</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo magni est quo vitae quis veritatis fugiat optio placeat enim!</p>
         </div>
 
